css/styless.css
@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');

:root {
    --light-blue: rgba(0, 168, 204, .1);
    --med-blue: rgb(0, 80, 130, .2);
    --dark-blue: rgb(0, 8, 57);
    --orange: #ffa41b;
}



body {
   background-color: var(--light-blue);
   margin: 0;
}



.main-header {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: 100vw;
    overflow: hidden;
    position: fixed;
    top: 0;
    background-color: var(--dark-blue);

}


.main-nav {
    display: flex;
    margin-right: 50px;
    width: 600px;
    align-items: center;
    justify-content: flex-end;
    background-color: var(--dark-blue);
}


.main-nav ul {
    display: flex;
    list-style: none;
    margin: 0 30px 0 30px;
}


/* ### MAIN BANNER ### */

.banner {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 300px;
    margin-top: 60px;
    align-items: center;
    max-width: 1200px;
}


.banner h1 {
    color: var(--dark-blue);
    font-size: 6rem;
    font-family: "Cedarville Cursive", cursive;
}


.banner h2 {
    color: var(--orange);
    font-size: 2rem;
}

.banner-text {
    display: flex;
    align-content: space-between;
}

.banner-text svg{
    width: 200px;
    fill: none;
    margin: 0 50px 0 50px;
    stroke: var(--dark-blue);
    stroke-width: 10px;
}


/* ### SECTION ### */


.svg-h1 {
    display: flex;
    /* justify-content: space-around; */
    align-items: center;
}

.svg-h1 svg {
    margin: 0 50px 0 50px;
    width: 70px;
    fill: var(--med-blue);
}


.banner-text {
    padding: 50px;
}


.site-footer {

    display: flex;
    justify-content: center;
    height: 50px;
    margin: auto;
    align-items: center;
    width: 100vw;
    background-color: var(--dark-blue);

}

.site-footer a {
    text-decoration: none;
    color: var(--orange);
    font-size: 1.2rem;

}


.text-image {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1200px;

}


.text {
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* height: 100%; */
    padding: 0 25px 0 25px;
}


.main-img {
    padding: 0 15px 0 15px;
    align-self: flex-end;
}

.main-img img{
    opacity: 0.1;
    height: 250px;
}


.section {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color:rgba(0, 8, 57, .4);
    transition: background-color 2s;
    width: 80%;
    height: 60vh;
    max-width: 1200px;
    margin-bottom: 50px;

}



.section h2 {
    font-size: 2rem;
}


/* ###  ACTIVE  ###*/

.inactive-btn 
    {
    background-color: var(--dark-blue);
    color: var(--orange);
    padding: 0 10px 0 10px;
    list-style: none;
    text-decoration: none;
    font-size: 2.5rem;
    border: none;
    cursor: pointer;
    }

.active-btn 
    {
    background-color: var(--orange);
    color: var(--dark-blue);
    padding: 0 10px 0 10px;
    list-style: none;
    text-decoration: none;
    font-size: 2.5rem;
    border: none;
    cursor: pointer;
    }


.active{
    color: var(--dark-blue);   
    transition: color 2s;
    transition: fill 2s;
}



.active img {
    opacity: 1;
}

.active h2 {
    font-size: 3rem;
    color:rgba(0, 8, 57, 1);
}


.active svg{
    fill: var(--orange);
}


.active-menu {
    background-color: var(--orange);
    color: #000839;

}



@media (max-width: 900px) 
{
    .text-image {
        flex-direction: column;
    }

    .main-container {
        display: flex;
        flex-direction: column;
        align-content: center;

    }

    .section {
        height: auto;
    }
}
 

